--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<div class="card border-dark mb-3">
+			<div class="card">
 			  	<div class="card-header">
 			    	Ted Talk
 			  	</div>
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 		<div class="col d-flex justify-content-center">
-			<div class="card border-dark mb-3">
+			<div class="card">
 			  	<div class="card-header">
 			    	Ted Talk
 			  	</div>
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 		<div class="col d-flex justify-content-center" id="last">
-			<div class="card border-dark mb-3">
+			<div class="card">
 			  	<div class="card-header">
 			    	Ted Talk
 			  	</div>
