--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 		<title>Purefairytale</title>
 		<link rel="icon" href="img/magic-wand.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="css/cards.css">
-		<script type="text/javascript" src="JavaScript/index.js"></script>
+		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="./css/cards.css">
+		<script type="text/javascript" src="./JavaScript/index.js"></script>
 	</head>
 	<body>
 		<div id="intro">
