--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="author" content="chr3st5an">
+		<meta name="description" content="Alles wichtige rund um Damira auf einer Webseite">
 		<title>Purefairytale</title>
 		<link rel="icon" href="img/magic-wand.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 		<link rel="stylesheet" type="text/css" href="./css/cards.css">
 		<script type="text/javascript" src="./JavaScript/index.js"></script>
+		<script>
+			checkIfDamiraHasBirthday();
+		</script>
 	</head>
 	<body>
 		<div id="intro">
@@ -51,8 +56,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="col d-flex justify-content-center">
-			<div class="card">
+		<div class="col d-flex justify-content-center" id="ted-talk1">
+			<div class="card" style="background:#ffcd48">
 			  	<div class="card-header">
 			    	Ted Talk
 			  	</div>
@@ -97,8 +102,8 @@
 			  	</div>
 			</div>
 		</div>
-		<div class="col d-flex justify-content-center">
-			<div class="card">
+		<div class="col d-flex justify-content-center" id="ted-talk2">
+			<div class="card" style="background:#ffcd48">
 			  	<div class="card-header">
 			    	Ted Talk
 			  	</div>
@@ -126,8 +131,8 @@
 			  	</div>
 			</div>
 		</div>
-		<div class="col d-flex justify-content-center" id="last">
-			<div class="card">
+		<div class="col d-flex justify-content-center" id="ted-talk3">
+			<div class="card" style="background:#ffcd48">
 			  	<div class="card-header">
 			    	Ted Talk
 			  	</div>
@@ -142,6 +147,7 @@
 			  	</div>
 			</div>
 		</div>
+		<div class="space"></div>
 		<footer id="footer">     
             <p onclick="scrollToTop()">
                 Created with
