--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			  	<img src="img/snapchat_qr.png" class="card-img-top" alt="QR Code">
 			  	<div class="card-body">
 			    	<h5 class="card-title">Fassunglose</h5>
-			    	<p class="card-text">Tägliche Snaps von Damira sind so berühigend, wie Pinguine auf Speed.</p>
+			    	<p class="card-text">Tägliche Snaps von Damira sind so beruhigend, wie Pinguine auf Speed.</p>
 			    	<span class="normal">
 			    		<button class="btn btn-outline-primary" onclick="openSnapchat()">
 			    			Adden&nbsp
